// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fails to resolve from default locations 1`] = `[Error: Icon set "invalid" not found. Please see if the name is correct or try installing it with "npm install @iconify-json/invalid"]`;

exports[`fails to resolve from local path 1`] = `[Error: Failed to find icon set at location "./icons.json"]`;

exports[`http location > fetches http and caches result 1`] = `
{
  "height": 24,
  "icons": {
    "icon": {
      "body": "",
    },
  },
  "info": {
    "name": "http",
  },
  "width": 24,
}
`;

exports[`http location > fetches http and caches result 2`] = `
{
  "height": 24,
  "icons": {
    "icon": {
      "body": "",
    },
  },
  "info": {
    "name": "http",
  },
  "width": 24,
}
`;

exports[`http location > fetches https and caches result 1`] = `
{
  "height": 32,
  "icons": {
    "icon": {
      "body": "",
    },
  },
  "info": {
    "name": "https",
  },
  "width": 32,
}
`;

exports[`http location > fetches https and caches result 2`] = `
{
  "height": 32,
  "icons": {
    "icon": {
      "body": "",
    },
  },
  "info": {
    "name": "https",
  },
  "width": 32,
}
`;

exports[`resolves from @iconify/json 1`] = `
{
  "icons": {
    "icon": {
      "body": "",
    },
  },
  "info": {
    "name": "bar",
  },
}
`;

exports[`resolves from @iconify-json 1`] = `
{
  "icons": {
    "icon": {
      "body": "",
    },
  },
  "info": {
    "name": "foo",
  },
}
`;

exports[`resolves from local path 1`] = `
{
  "icons": {
    "icon": {
      "body": "",
    },
  },
  "info": {
    "name": "local",
  },
}
`;

exports[`resolves from local path with root 1`] = `
{
  "info": {
    "name": "local with root",
  },
}
`;

exports[`resolves from non-default module 1`] = `
{
  "icons": {
    "icon": {
      "body": "",
    },
  },
  "info": {
    "name": "icon-module",
  },
}
`;
